# codecrafters-http-server-cpp

./: .gitignore  CMakeLists.txt  README.md  codecrafters.yml
src/: CONTENTTYPE.cpp  CONTENTTYPE.h  Globals.cpp  Globals.h  HTTPMETHOD.h  HttpPacket.cpp  HttpPacket.h  SocketWrapper.cpp  SocketWrapper.h  WebServer.cpp  WebServer.h  server.cpp
src/controllers/: EchoController.cpp  EchoController.h  FileController.cpp  FileController.h  UserAgentController.cpp  UserAgentController.h
src/enums/: CONTENTTYPE.cpp  CONTENTTYPE.h  HTTPMETHOD.h
src/objects/: HttpHeader.cpp  HttpHeader.h  HttpPacket.cpp  HttpPacket.h  SocketWrapper.cpp  SocketWrapper.h
src/utilities/: GzipStream.cpp  GzipStream.h  StringUtils.cpp  StringUtils.h  ThreadPool.cpp  ThreadPool.h
